[package]
name = "rel-ptr"
version = "0.1.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
repository = "https://github.com/KrishnaSannasi/published_crates/tree/master/set_slice"
description = "A macro for assigning values to slices"
keywords = ["relative", "pointer", "ptr", "smart"]
categories = ["no-std"]
license = "MIT"
readme = "README.md"
edition = "2018"

[features]
default = ['std']
std = []

[dependencies]
